--- a/src/index.css
+++ b/src/index.css
@@ -411,7 +411,7 @@ input[type="date"] {
 }
 
 .btn {
-  padding: 6px 12px;
+  padding: 7px 29px;
   font-size: 14px;
   border: none;
   border-radius: 6px;
@@ -466,6 +466,7 @@ input[type="date"] {
 .link-logo {
   width: 40px;
   height: 40px;
+  border-radius: 20px;
 }
 
 .linksHeader {
