--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,6 +180,7 @@ html.lenis {
 .btn-primary {
   background: linear-gradient(135deg, #6366f1, #8b5cf6);
   color: white;
+  padding: 13px 12px 16px 21px !important;
   box-shadow: 0 4px 15px rgba(99, 102, 241, 0.4);
 }
 
@@ -462,7 +463,7 @@ html.lenis {
 
 /* How It Works Section */
 .how-it-works-section {
-  padding: 100px 0;
+  padding: 147px 0;
   background: white;
 }
 
@@ -687,7 +688,7 @@ html.lenis {
 /* CTA Section */
 .cta-section {
   padding: 100px 0;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: white;
   color: white;
   text-align: center;
 }
@@ -701,9 +702,11 @@ html.lenis {
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 1rem;
+  color: black;
 }
 
 .cta-subtitle {
+  color: black;
   font-size: 1.2rem;
   opacity: 0.9;
   margin-bottom: 2.5rem;
@@ -740,6 +743,13 @@ html.lenis {
   .hero-title {
     font-size: 2.5rem;
   }
+  .navbar-container{
+    gap: 0px;
+  }
+  .btn{
+    padding: 7px 16px !important;
+  }
+
 
   .hero-subtitle {
     font-size: 1.1rem;
@@ -865,14 +875,6 @@ html.lenis {
   left: 0;
   right: 0;
   width: 100%;
-  background: linear-gradient(
-    135deg,
-    #667eea 0%,
-    #764ba2 25%,
-    #f093fb 50%,
-    #f5576c 75%,
-    #4facfe 100%
-  );
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
   backdrop-filter: blur(10px);
@@ -1140,7 +1142,7 @@ html.lenis {
 
 .register-input-wrapper {
   position: relative;
-  margin-bottom: 0.800rem;
+  margin-bottom: 0.500rem;
 }
 
 .input-icon {
@@ -1356,14 +1358,14 @@ html.lenis {
 }
 
 .right-title {
-  font-size: 1.4rem;
+  font-size: 30px;
   font-weight: 600;
   margin-bottom: 1.25rem;
   line-height: 1.3;
 }
 
 .right-description {
-  font-size: 0.9rem;
+  font-size: 20px;
   line-height: 1.6;
   margin-bottom: 2rem;
   opacity: 0.9;
@@ -1395,13 +1397,13 @@ html.lenis {
 }
 
 .benefit-content h5 {
-  font-size: 0.95rem;
+  font-size: 20px;
   font-weight: 600;
   margin-bottom: 0.25rem;
 }
 
 .benefit-content p {
-  font-size: 0.8rem;
+  font-size: 16px;
   opacity: 0.8;
   margin: 0;
   line-height: 1.4;
@@ -1773,13 +1775,13 @@ html.lenis {
 .section-header h2 {
   font-size: 20px;
   font-weight: 600;
-  color: white;
+  color: black;
   margin-bottom: 5px;
 }
 
 .section-header p {
   font-size: 18px;
-  color:white !important;
+  color: black;
 }
 
 /* Links List */
