--- a/public/css/style.css
+++ b/public/css/style.css
@@ -887,7 +887,7 @@ body {
   gap: 0.5rem;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  background-color: #6366f1;
+  background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
   backdrop-filter: blur(10px);
@@ -931,7 +931,8 @@ body {
 }
 
 .register-title {
-  color: #393f81;
+  /* background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%); */
+  color: #22c55e;
   font-weight: 600;
   margin-bottom: 0;
   font-size: 1.2rem;
@@ -1064,14 +1065,17 @@ body {
   border-radius: 0.375rem;
   font-size: 0.95rem;
   font-weight: 600;
-  color: white;
+  color: rgb(5, 5, 5);
   cursor: pointer;
   transition: all 0.3s ease;
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
-
+.formButtton {
+  background: linear-gradient(135deg, #6ed494 0%, #7ef8aa 100%);
+}
 .register-btn-primary:hover:not(:disabled) {
+  background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
   transform: translateY(-1px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -1125,10 +1129,11 @@ body {
 
 .register-btn-outline {
   padding: 0.5rem 1.25rem;
-  border: 2px solid #6366f1;
+  border: 2px solid #22c55e;
   border-radius: 0.375rem;
   background: transparent;
-  color: #6366f1;
+  
+  color: #5fbd82;
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -1138,10 +1143,10 @@ body {
 }
 
 .register-btn-outline:hover {
-  background: #6366f1;
+  background: #22c55e;
   color: white;
   transform: translateY(-1px);
-  box-shadow: 0 4px 8px rgba(220, 53, 69, 0.3);
+  box-shadow: 0 4px 8px rgba(38, 250, 119, 0.3);
 }
 
 /* Right Column */
@@ -1589,13 +1594,13 @@ body {
 .section-header h2 {
   font-size: 20px;
   font-weight: 600;
-  color: white;
+  color: #0f172a;
   margin-bottom: 5px;
 }
 
 .section-header p {
   font-size: 18px;
-  color: white !important;
+  color: #2d2929 !important;
 }
 
 /* Links List */
