--- a/src/index.css
+++ b/src/index.css
@@ -466,6 +466,7 @@ input[type="date"] {
 .link-logo {
   width: 40px;
   height: 40px;
+  border-radius: 20px;
 }
 
 .linksHeader {
@@ -542,7 +543,6 @@ input[type="file"] {
 }
 
 .btn-secondary {
-
   padding: 8px 16px;
   border: none;
   border-radius: 6px;
