--- a/src/component/pages/links/LinksAddEdit.css
+++ b/src/component/pages/links/LinksAddEdit.css
@@ -83,6 +83,8 @@
 .modal-body {
   padding: 20px;
   max-height: calc(90vh - 120px);
+  overflow-y: auto;
+  overflow-x:hidden;
 }
 .link-form {
   display: flex;
