update after pull

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1776,7 +1776,7 @@ html.lenis {
   font-size: 20px;
   font-weight: 600;
   color: black;
-  margin-bottom: 5px;
+  margin:41px 0px 5px 0px;
 }
 
 .section-header p {
