--- a/src/App.css
+++ b/src/App.css
@@ -1462,3 +1462,15 @@ li.has-dropdown1 span {
 .newsection{
   color: white !important;
 }
+.privateLinkLable{
+  font-weight: 500;
+  font-size: 17px;
+}
+.privateseletected{
+  color: red;
+  
+}
+.publicselected{
+  color:blue;
+
+}
