--- a/src/App.css
+++ b/src/App.css
@@ -1474,3 +1474,11 @@ li.has-dropdown1 span {
   color:blue;
 
 }
+.passwordProfile{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 10px;
+    margin-right: 11px;
+    z-index: 10;
+}
