update after pull

--- a/src/component/pages/dashboard/mobilePreview.css
+++ b/src/component/pages/dashboard/mobilePreview.css
@@ -16,6 +16,9 @@
   position: relative;
   z-index: 2;            
 }
+.link-card-social {
+  background: transparent;
+}
 .share-profile-button {
   display: flex;
   align-items: center;
