--- a/src/component/pages/links/links.css
+++ b/src/component/pages/links/links.css
@@ -235,7 +235,7 @@
 }
 
 .social-icon {
-  /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   color: white;
   font-size: 20px;
 }
